# ITMLibrary-weeding-assistant

./: .gitignore  CODE_TUTORIAL.txt  Makefile  README.linux.md  README.md  README.windows.md  README_NEW.md  RESTRUCTURE_SUMMARY.md  STRUCTURE_GUIDE.md  pyproject.toml  run.bat  tasks.py
WoS Expanded API scripts/: api_operations.py  apikeys.py  data_processing.py
input/: Uitleen_2019-2026.csv  Uitleen_collega's.csv
resources/: README.md  check_urls.py  update_peer_review.py
src/itm_weeding/: __init__.py  cli.py  grouping.py  loaders.py  main.py  pipeline.py  text_utils.py
src/itm_weeding/config/: __init__.py  barnard.py  rules_data.py
src/itm_weeding/core/: __init__.py  helpers.py  parser.py  rules.py  rules_engine.py
src/itm_weeding/loaders/: __init__.py  bib.py  circulation.py  unicat.py
src/itm_weeding/report/: __init__.py  builder.py
src/itm_weeding/unicat/: __init__.py  cache.py  lookup.py
src/itm_weeding_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py
unicat/: unicat_apply_cache.py  unicat_lookup.py  unicat_lookup1.py  unicat_lookup2.py  unicat_lookup3.py
weed/: build_final.py  weed.py  weed1.py  weed2.py  weed3.py  weed4.py  weed5.py  weed6.py  weed7.py  weed8.py  weed9.py  weed9a.py
